// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs view Renders a breadcrumbs view 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
  >
    <ul
      class="PodBrowser-breadcrumb"
      data-testid="breadcrumbs"
    >
      <li
        class="PodBrowser-breadcrumb__crumb"
      >
        <i
          class="PodBrowser-icon-caret-left PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--small"
        />
        All files
        <i
          class="PodBrowser-icon-caret-right PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--large"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs view Renders a breadcrumbs view with breadcrumbs based on url slashes 1`] = `
<DocumentFragment>
  <nav
    aria-label="Breadcrumbs"
  >
    <ul
      class="PodBrowser-breadcrumb"
      data-testid="breadcrumbs"
    >
      <li
        class="PodBrowser-breadcrumb__crumb"
      >
        <i
          class="PodBrowser-icon-caret-left PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--small"
        />
        <a
          class="PodBrowser-breadcrumb__link"
          href="/resource/https%3A%2F%2Fwww.mypodbrowser.com%2F"
        >
          <span
            class="PodBrowser-breadcrumb__prefix"
          >
            Back to 
          </span>
          All files
        </a>
        <i
          class="PodBrowser-icon-caret-right PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--large"
        />
      </li>
      <li
        class="PodBrowser-breadcrumb__crumb"
      >
        <i
          class="PodBrowser-icon-caret-left PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--small"
        />
        <a
          class="PodBrowser-breadcrumb__link"
          href="/resource/https%3A%2F%2Fwww.mypodbrowser.com%2Fsome%2F"
        >
          <span
            class="PodBrowser-breadcrumb__prefix"
          >
            Back to 
          </span>
          some
        </a>
        <i
          class="PodBrowser-icon-caret-right PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--large"
        />
      </li>
      <li
        class="PodBrowser-breadcrumb__crumb"
      >
        <i
          class="PodBrowser-icon-caret-left PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--small"
        />
        location
        <i
          class="PodBrowser-icon-caret-right PodBrowser-breadcrumb__caret PodBrowser-breadcrumb__caret--large"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
